c3/search
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1193:24: error: use of undeclared identifier 'search_rc_index'
if ( captured == 13 || search_rc_index[captured] != search_rc_index[path[v11].captured] ) 
                       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1193:53: error: use of undeclared identifier 'search_rc_index'
if ( captured == 13 || search_rc_index[captured] != search_rc_index[path[v11].captured] ) 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1570:12: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + 3 * v62) = *( _OWORD *)&v148[v52].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1570:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + 3 * v62) = *( _OWORD *)&v148[v52].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1570:62: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + 3 * v62) = *( _OWORD *)&v148[v52].from; 
                                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1570:54: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + 3 * v62) = *( _OWORD *)&v148[v52].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1712:12: error: expected expression
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1712:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1712:60: error: expected expression
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1712:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v85 / 3 + v86 / 0x18].from = *( _OWORD *)&v83->from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1722:12: error: expected expression
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1722:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1722:54: error: expected expression
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1722:46: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v86 / 0x1C20][v90].from = *( _OWORD *)&pv[0][301 * v87].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1732:12: error: expected expression
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1732:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1732:36: error: expected expression
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1732:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86] = *( _OWORD *)&v91[v92]; 
                           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1733:12: error: expected expression
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1733:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1733:41: error: expected expression
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1733:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91[v86 + 24] = *( _OWORD *)&v91[v92 + 24]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1771:19: error: expected expression
v144 = *( _OWORD *)&killer1[v104].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1771:11: error: use of undeclared identifier '_OWORD'
v144 = *( _OWORD *)&killer1[v104].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1773:12: error: expected expression
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1773:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1773:46: error: expected expression
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1773:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v113].from = *( _OWORD *)&killer2[v104].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1774:12: error: expected expression
*( _OWORD *)&killer2[v113].from = v144; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1774:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v113].from = v144; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1792:19: error: expected expression
v144 = *( _OWORD *)&killer2[v104].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1792:11: error: use of undeclared identifier '_OWORD'
v144 = *( _OWORD *)&killer2[v104].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1794:12: error: expected expression
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1794:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1794:46: error: expected expression
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1794:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v117].from = *( _OWORD *)&killer3[v104].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1795:12: error: expected expression
*( _OWORD *)&killer3[v117].from = v144; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1795:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v117].from = v144; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1806:12: error: expected expression
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1806:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1806:46: error: expected expression
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/search.c:1806:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v118].from = *( _OWORD *)&v83->from; 
                                     ^
42 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/search/src/obj/search.o] Error 1
